--- a/la-mia-pizzeria-static/appsettings.json
+++ b/la-mia-pizzeria-static/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PizzaContextConnection": "Server=localhost;Database=pizzeria-db;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
